# der-Kalkulator

./: CMakeLists.txt  README.md  main.cpp
include/: math.h  matrix.h
matrices/: Erst.txt  Zweiste.txt
src/: math.cpp  matrix.cpp
